backend/services/identity-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app: identity-service
  ports:
    - port: 8000
      targetPort: 8000
